syntax = "proto3";
package fx.gov.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/pundiai/fx-core/v8/x/gov/types";

message UpdateStore {
  option (gogoproto.goproto_stringer) = false;

  string space = 1;
  string key = 2;
  string old_value = 3;
  string value = 4;
}

message SwitchParams {
  repeated string disable_precompiles = 1;
  repeated string disable_msg_types = 2;
}

message CustomParams {
  // For EGF parameters, what percentage of deposit is required to enter the
  string deposit_ratio = 1 [ (cosmos_proto.scalar) = "cosmos.Dec" ];

  // Duration of the voting period.
  google.protobuf.Duration voting_period = 2 [ (gogoproto.stdduration) = true ];

  // Minimum percentage of total stake needed to vote for a result to be
  // considered valid.
  string quorum = 3 [ (cosmos_proto.scalar) = "cosmos.Dec" ];
}